--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_with = "2"
 axum = "0.7"
 tower-http = { version = "0.5", features = ["fs"]}
 tower-cookies = "0.10"
+# -- Data
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
 # tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"]}
