--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,6 +14,10 @@ PORT="8080"
 #   For deployed env, should be managed by container
 #   (e.g., Kubernetes).
 
+## -- Secrets
+SERVICE_DB_URL="postgres://app_user:dev_only_pwd@localhost/app_db"
+
+
 ## -- CinfigMap
 
 SERVICE_WEB_FOLDER="http-root/"
