--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ axum = "0.7"
 tower-http = { version = "0.5", features = ["fs"]}
 tower-cookies = "0.10"
 # -- Data
-sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
+sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
+sqlb = "0.4"
 # tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"]}
