--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1", features = ["full"] }
 # Serde / json
 serde = { version = "1", features = ["derive"]}
 serde_json = "1"
-serde_with = "2"
+serde_with = "3"
 #axum
 axum = "0.7"
 tower-http = { version = "0.5", features = ["fs"]}
@@ -21,11 +21,17 @@ sqlb = "0.4"
 # tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"]}
+# -- Crypt & Encoding
+rand = "0.8"
+hmac = "0.12"
+sha2 = "0.10"
+base64-url = "2"
 # Others
-lazy-regex = "2"
+lazy-regex = "3"
 async-trait = "0.1"
 strum_macros = "0.25"
 uuid = { version = "1", features = ["v4", "fast-rng"] }
+time = "0.3"
 
 [dev-dependencies]
 anyhow = "1"
